# doable

./: .gitignore  README.md
device/: CMakeLists.txt  mkpb.ps1  prj.conf  sample.yaml
device/src/: items.pb.c  items.pb.h  led.c  led.h  main.c
host/: Cargo.toml  build.rs
host/src/: main.rs
proto/: ble_gatt.proto
src/: items.proto  main.rs
