[package]
name = "doable"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5"
prost = "0.12"
btleplug = "0.11"
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.36", features = ["rt", "macros", "rt-multi-thread"] }
uuid = { version = "1.7.0" }


[build-dependencies]
cfg-if = { version = "1" }
env_logger = { version = "0.11", default-features = false }
prost-build = { version = "0.12" }
protobuf = { version = "3.4" }

